Added images and navigation.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <title>Coldplay Fan Site</title>
 </head>
 <body>
+    <a href="index.html">Home</a>
+    <a href="album.html">Album</a>
+    <a href="tours.html">Tours</a>
+    <a href="spotify.html">Spotify</a>
     <h1>COLDPLAY FAN SITE</h1>
+
+
     <h3>About Coldplay</h3>
     <p>Coldplay are a British rock band formed in
         London in 1997. They consist of vocalist and pianist Chris Martin, guitarist Jonny Buckland, bassist Guy Berryman,
@@ -17,6 +23,7 @@
           Year and a Grammy Award for Best Alternative Music Album. The group's follow-up,
           A Rush of Blood to the Head (2002), won the same accolades. X&Y (2005) completed what they considered a trilogy. Its successor, Viva la Vida or Death and All His Friends (2008), received a Grammy Award for Best Rock Album. Both records
            topped the charts in more than 30 countries and became the best-sellers of their respective years globally. Viva la Vida's title track was also the first song by British musicians to reach number one in the United States and United Kingdom simultaneously in the 21st century.</p>
+     <img src="coldplaybandpic.png" alt="Picture of the band members">      
     <h3>Why I love Coldplay?</h3>
     <p>Coldplay is a nice band that produces meanigful songs. I especially love them because they make upbeat songs that help lift my mood.</p>
 
